@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-05T16:19:00Z",
+  "timestamp" : "2022-06-06T08:17:29Z",
   "count_outdated" : 324,
   "uniques_outdated" : 181,
-  "count" : 343,
-  "uniques" : 195,
+  "count" : 344,
+  "uniques" : 196,
   "clones" : [
     {
       "timestamp": "2022-05-28T00:00:00Z",
@@ -63,6 +63,13 @@
     },
     {
       "timestamp": "2022-06-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
